testing a new upload

--- a/Movies-ETL.ipynb
+++ b/Movies-ETL.ipynb
@@ -1224,124 +1224,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20238</th>\n",
+       "      <th>21372</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'id': 18, 'name': 'Drama'}]</td>\n",
+       "      <td>[{'id': 28, 'name': 'Action'}, {'id': 35, 'nam...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>53445</td>\n",
-       "      <td>tt1268989</td>\n",
+       "      <td>26450</td>\n",
+       "      <td>tt0266850</td>\n",
        "      <td>en</td>\n",
-       "      <td>The Unloved</td>\n",
-       "      <td>The Unloved is film that gives a child's eye v...</td>\n",
+       "      <td>Phantom of the Megaplex</td>\n",
+       "      <td>A young man working at a cinema on a special p...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2009-05-17</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The Unloved</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33138</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 18, 'name': 'Drama'}]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>175334</td>\n",
-       "      <td>tt0012408</td>\n",
-       "      <td>en</td>\n",
-       "      <td>The Love Light</td>\n",
-       "      <td>Angela maintains a coastal lighthouse in Italy...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1921-01-08</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2000-11-10</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>89.0</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Released</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Love Light</td>\n",
+       "      <td>Phantom of the Megaplex</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29013</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4700000</td>\n",
-       "      <td>[{'id': 53, 'name': 'Thriller'}, {'id': 18, 'n...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>254200</td>\n",
-       "      <td>tt3305316</td>\n",
-       "      <td>da</td>\n",
-       "      <td>En chance til</td>\n",
-       "      <td>Detectives and best friends Andreas and Simon ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2014-09-09</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>[{'iso_639_1': 'da', 'name': 'Dansk'}, {'iso_6...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>How far would you go?</td>\n",
-       "      <td>A Second Chance</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>42.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40204</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 10751, '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65755</td>\n",
-       "      <td>tt0365880</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Uncle P</td>\n",
-       "      <td>Rapper/multi-millionaire P. Miller becomes the...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2007-06-26</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Uncle P</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2580</th>\n",
+       "      <th>31294</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>[{'id': 18, 'name': 'Drama'}]</td>\n",
-       "      <td>http://aso.gov.au/titles/features/the-boys/</td>\n",
-       "      <td>13821</td>\n",
-       "      <td>tt0139898</td>\n",
-       "      <td>en</td>\n",
-       "      <td>The Boys</td>\n",
-       "      <td>Brett Sprague is a violent and psychopathic ma...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45997</td>\n",
+       "      <td>tt0114096</td>\n",
+       "      <td>it</td>\n",
+       "      <td>Pasolini, un delitto italiano</td>\n",
+       "      <td>The story of the murder of a poet, a man, a gr...</td>\n",
        "      <td>...</td>\n",
-       "      <td>1998-05-07</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>1995-09-03</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>[{'iso_639_1': 'it', 'name': 'Italiano'}]</td>\n",
        "      <td>Released</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Boys</td>\n",
+       "      <td>Who Killed Pasolini?</td>\n",
        "      <td>False</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19597</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 48194, 'name': 'Ator Collection', 'post...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 14, 'name': 'Fantasy'}, {'id': 28, 'na...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40075</td>\n",
+       "      <td>tt0085183</td>\n",
+       "      <td>it</td>\n",
+       "      <td>Ator l'invincibile</td>\n",
+       "      <td>The son of Torren learns of his heritage, goes...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1982-10-07</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>[{'iso_639_1': 'it', 'name': 'Italiano'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>He was born to wield the mighty sword of Thoren.</td>\n",
+       "      <td>Ator, the Fighting Eagle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12481</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 263, 'name': 'The Dark Knight Collectio...</td>\n",
+       "      <td>185000000</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 28, 'name...</td>\n",
+       "      <td>http://thedarkknight.warnerbros.com/dvdsite/</td>\n",
+       "      <td>155</td>\n",
+       "      <td>tt0468569</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>Batman raises the stakes in his war on crime. ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2008-07-16</td>\n",
+       "      <td>1.004558e+09</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Why So Serious?</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>12269.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4181</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37558</td>\n",
+       "      <td>tt0184819</td>\n",
+       "      <td>fr</td>\n",
+       "      <td>Petits Frères</td>\n",
+       "      <td>Talia runs away from home taking her beloved d...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1999-04-06</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'iso_639_1': 'fr', 'name': 'Français'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Little Brothers</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1349,61 +1349,68 @@
        "</div>"
       ],
       "text/plain": [
-       "       adult belongs_to_collection   budget  \\\n",
-       "20238  False                   NaN        0   \n",
-       "33138  False                   NaN        0   \n",
-       "29013  False                   NaN  4700000   \n",
-       "40204  False                   NaN        0   \n",
-       "2580   False                   NaN        0   \n",
+       "       adult                              belongs_to_collection     budget  \\\n",
+       "21372  False                                                NaN          0   \n",
+       "31294  False                                                NaN          0   \n",
+       "19597  False  {'id': 48194, 'name': 'Ator Collection', 'post...          0   \n",
+       "12481  False  {'id': 263, 'name': 'The Dark Knight Collectio...  185000000   \n",
+       "4181   False                                                NaN          0   \n",
        "\n",
        "                                                  genres  \\\n",
-       "20238                      [{'id': 18, 'name': 'Drama'}]   \n",
-       "33138                      [{'id': 18, 'name': 'Drama'}]   \n",
-       "29013  [{'id': 53, 'name': 'Thriller'}, {'id': 18, 'n...   \n",
-       "40204  [{'id': 35, 'name': 'Comedy'}, {'id': 10751, '...   \n",
-       "2580                       [{'id': 18, 'name': 'Drama'}]   \n",
+       "21372  [{'id': 28, 'name': 'Action'}, {'id': 35, 'nam...   \n",
+       "31294                      [{'id': 18, 'name': 'Drama'}]   \n",
+       "19597  [{'id': 14, 'name': 'Fantasy'}, {'id': 28, 'na...   \n",
+       "12481  [{'id': 18, 'name': 'Drama'}, {'id': 28, 'name...   \n",
+       "4181   [{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...   \n",
        "\n",
-       "                                          homepage      id    imdb_id  \\\n",
-       "20238                                          NaN   53445  tt1268989   \n",
-       "33138                                          NaN  175334  tt0012408   \n",
-       "29013                                          NaN  254200  tt3305316   \n",
-       "40204                                          NaN   65755  tt0365880   \n",
-       "2580   http://aso.gov.au/titles/features/the-boys/   13821  tt0139898   \n",
+       "                                           homepage     id    imdb_id  \\\n",
+       "21372                                           NaN  26450  tt0266850   \n",
+       "31294                                           NaN  45997  tt0114096   \n",
+       "19597                                           NaN  40075  tt0085183   \n",
+       "12481  http://thedarkknight.warnerbros.com/dvdsite/    155  tt0468569   \n",
+       "4181                                            NaN  37558  tt0184819   \n",
        "\n",
-       "      original_language  original_title  \\\n",
-       "20238                en     The Unloved   \n",
-       "33138                en  The Love Light   \n",
-       "29013                da   En chance til   \n",
-       "40204                en         Uncle P   \n",
-       "2580                 en        The Boys   \n",
+       "      original_language                 original_title  \\\n",
+       "21372                en        Phantom of the Megaplex   \n",
+       "31294                it  Pasolini, un delitto italiano   \n",
+       "19597                it             Ator l'invincibile   \n",
+       "12481                en                The Dark Knight   \n",
+       "4181                 fr                  Petits Frères   \n",
        "\n",
        "                                                overview  ... release_date  \\\n",
-       "20238  The Unloved is film that gives a child's eye v...  ...   2009-05-17   \n",
-       "33138  Angela maintains a coastal lighthouse in Italy...  ...   1921-01-08   \n",
-       "29013  Detectives and best friends Andreas and Simon ...  ...   2014-09-09   \n",
-       "40204  Rapper/multi-millionaire P. Miller becomes the...  ...   2007-06-26   \n",
-       "2580   Brett Sprague is a violent and psychopathic ma...  ...   1998-05-07   \n",
+       "21372  A young man working at a cinema on a special p...  ...   2000-11-10   \n",
+       "31294  The story of the murder of a poet, a man, a gr...  ...   1995-09-03   \n",
+       "19597  The son of Torren learns of his heritage, goes...  ...   1982-10-07   \n",
+       "12481  Batman raises the stakes in his war on crime. ...  ...   2008-07-16   \n",
+       "4181   Talia runs away from home taking her beloved d...  ...   1999-04-06   \n",
        "\n",
-       "      revenue runtime                                   spoken_languages  \\\n",
-       "20238     0.0   106.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "33138     0.0    89.0                                                 []   \n",
-       "29013     0.0   103.0  [{'iso_639_1': 'da', 'name': 'Dansk'}, {'iso_6...   \n",
-       "40204     0.0    88.0                                                 []   \n",
-       "2580      0.0    86.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "            revenue runtime  \\\n",
+       "21372  0.000000e+00    89.0   \n",
+       "31294  0.000000e+00   100.0   \n",
+       "19597  0.000000e+00    98.0   \n",
+       "12481  1.004558e+09   152.0   \n",
+       "4181   0.000000e+00     0.0   \n",
        "\n",
-       "         status                tagline            title  video vote_average  \\\n",
-       "20238  Released                    NaN      The Unloved  False          6.5   \n",
-       "33138  Released                    NaN   The Love Light  False          0.0   \n",
-       "29013  Released  How far would you go?  A Second Chance  False          6.7   \n",
-       "40204  Released                    NaN          Uncle P  False          7.7   \n",
-       "2580   Released                    NaN         The Boys  False          6.8   \n",
+       "                                        spoken_languages    status  \\\n",
+       "21372           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "31294          [{'iso_639_1': 'it', 'name': 'Italiano'}]  Released   \n",
+       "19597          [{'iso_639_1': 'it', 'name': 'Italiano'}]  Released   \n",
+       "12481  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
+       "4181           [{'iso_639_1': 'fr', 'name': 'Français'}]  Released   \n",
        "\n",
-       "      vote_count  \n",
-       "20238       12.0  \n",
-       "33138        0.0  \n",
-       "29013       42.0  \n",
-       "40204        3.0  \n",
-       "2580         3.0  \n",
+       "                                                tagline  \\\n",
+       "21372                                               NaN   \n",
+       "31294                                               NaN   \n",
+       "19597  He was born to wield the mighty sword of Thoren.   \n",
+       "12481                                   Why So Serious?   \n",
+       "4181                                                NaN   \n",
+       "\n",
+       "                          title  video vote_average vote_count  \n",
+       "21372   Phantom of the Megaplex  False          5.7       20.0  \n",
+       "31294      Who Killed Pasolini?  False          7.0        8.0  \n",
+       "19597  Ator, the Fighting Eagle  False          3.6       13.0  \n",
+       "12481           The Dark Knight  False          8.3    12269.0  \n",
+       "4181            Little Brothers  False          5.4        4.0  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
@@ -5802,9 +5809,9 @@
       "text/plain": [
        "False                                                                                                                             45454\n",
        "True                                                                                                                                  9\n",
-       " - Written by Ørnås                                                                                                                   1\n",
-       " Rune Balot goes to a casino connected to the October corporation to try to wrap up her case once and for all.                        1\n",
        " Avalanche Sharks tells the story of a bikini contest that turns into a horrifying affair when it is hit by a shark avalanche.        1\n",
+       " Rune Balot goes to a casino connected to the October corporation to try to wrap up her case once and for all.                        1\n",
+       " - Written by Ørnås                                                                                                                   1\n",
        "Name: adult, dtype: int64"
       ]
      },
@@ -6263,6 +6270,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "86321f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b7eb1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e54474",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa484d1b",
    "metadata": {},
    "outputs": [],
    "source": []
